[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://devilFruit.tscn" type="PackedScene" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/بات مان - سبيس تون - Batman.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/music/Funny GAME OVER  Free Sound Effect.mp3" type="AudioStream" id=7]
[ext_resource path="res://background.tscn" type="PackedScene" id=8]
[ext_resource path="res://pause.gd" type="Script" id=9]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600 )
}

[sub_resource type="DynamicFont" id=2]
size = 64
outline_color = Color( 0.266667, 1, 1, 1 )
font_data = ExtResource( 10 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
enemie_scene = ExtResource( 1 )
devilFruit_scene = ExtResource( 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 8 )]

[node name="enemiePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawnLocation" type="PathFollow2D" parent="enemiePath"]

[node name="enemiesTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 160 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPos" type="Position2D" parent="."]
position = Vector2( 512, 160 )

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 9 )

[node name="blackOverlay" type="ColorRect" parent="CanvasLayer/pause"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.956863 )

[node name="MessageLabel" type="Label" parent="CanvasLayer/pause"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 2 )
text = "Press \"P\" 
to resume
"
align = 1

[node name="spawn1" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="spaqn2" type="Timer" parent="."]
wait_time = 120.0

[node name="spawn3" type="Timer" parent="."]
wait_time = 180.0

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 760.0
margin_top = 212.0
margin_right = 240.0
margin_bottom = 371.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "Need a Pause?
Press P"
align = 1

[connection signal="timeout" from="enemiesTimer" to="." method="_on_Timer_timeout"]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="finished" from="GameOver" to="." method="_on_GameOver_finished"]
[connection signal="timeout" from="spawn1" to="." method="_on_spawn1_timeout"]
[connection signal="timeout" from="spaqn2" to="." method="_on_spaqn2_timeout"]
[connection signal="timeout" from="spawn3" to="." method="_on_spawn3_timeout"]
